# PBD

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml
framework/pbd_core/: pyproject.toml
framework/pbd_core/src/pbd_core/: __init__.py  async_utils.py  decorators.py  exceptions.py  extendable.py  init_status.py  singleton.py
framework/pbd_core/src/pbd_core/funcs/: __init__.py  object.py  path.py  string.py
framework/pbd_core/src/pbd_core/helpers/: __init__.py  dict.py  path.py  string.py
framework/pbd_core/src/pbd_core/logging/: __init__.py  has_logger.py  logger.py  logger_setting.py
framework/pbd_core/src/pbd_core/modularity/: __init__.py  base.py  exceptions.py  module_manager.py
framework/pbd_di/: pyproject.toml
framework/pbd_di/src/pbd_di/: __init__.py  container.py  decorators.py  exceptions.py  funcs.py  generic.py  interfaces.py  scoped_context.py  service_provider.py
framework/pbd_guids/: pyproject.toml
framework/pbd_guids/src/pbd_guids/: __init__.py  interfaces.py  module.py  sequential_guid_generator.py
framework/pbd_http/: pyproject.toml
framework/pbd_http/src/pbd_http/: __init__.py  accessor_extension.py  context_accessor.py
framework/pbd_localization/: pyproject.toml
framework/pbd_localization/src/pbd_localization/: __init__.py  default_culture.py  default_culture_store.py  default_localizer.py  exceptions.py  extensions.py  generic.py  interfaces.py  localizable.py  localization_resource.py  module.py
framework/pbd_security/: pyproject.toml
framework/pbd_security/src/pbd_security/: current_user.py  exceptions.py
framework/pbd_security/src/pbd_security/security/encryption/: __init__.py
framework/pbd_settings/: pyproject.toml
framework/pbd_settings/src/pbd_settings/: __init__.py  generic.py  group.py  interfaces.py  json_store.py  module.py  options.py  provider.py  schema.py  value_provider_manager.py
framework/pbd_settings/src/pbd_settings/value_providers/: Json.py  __init__.py  base.py  default_value.py  global_.py  manager.py  user.py
tests/: conftest.py
tests/framework/pbd_core/: test_decorators.py  test_exceptions.py  test_extendable.py  test_init_status.py  test_singleton.py
tests/framework/pbd_core/funcs/: test_object.py  test_path.py  test_string.py
tests/framework/pbd_core/helpers/: test_dict.py  test_path.py  test_string.py
tests/framework/pbd_core/logging/: test_has_logger.py  test_logger.py
tests/framework/pbd_core/modularity/: test_module_manager.py
tests/framework/pbd_di/: test_container.py  test_decorators.py  test_funcs.py  test_interfaces.py  test_scoped_context.py  test_service_provider.py
tests/framework/pbd_guids/: test_sequential_guid_generator.py
tests/framework/pbd_localization/: test_default_culture.py  test_default_culture_store.py  test_default_localizer.py  test_localizable.py  test_localization_resource.py  test_localizer_extension.py
tests/framework/pbd_settings/: test_definition_provider.py  test_group.py
