[project]
name = "pbd-core"
version = "0.1.0"
description = "PDB核心模块"
readme = "README.md"
authors = [
    { name = "tianxiaode", email = "huangdengqiao@extjs.tech" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.5",
]


[project.optional-dependencies]
logging-utils = ["logging-utilities>=5.0.0"]
rich = ["rich>=14.0.0"]
rich-logging = [
    "logging-utilities>=5.0.0",
    "rich>=14.0.0"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pbd_core"]
