[project]
name = "pbd-di"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tianxiaode", email = "huangdengqiao@extjs.tech" }
]
requires-python = ">=3.11"
dependencies = [
    "pbd_core"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pbd_di"]