[project]
name = "pbd-guids"
version = "0.1.0"
description = "PBD GUID生成模块"
readme = "README.md"
authors = [
    { name = "tianxiaode", email = "huangdengqiao@extjs.tech" }
]
requires-python = ">=3.11"
dependencies = [
    "pbd-core",
    "pbd-di"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pbd_guids"]

[tool.uv.sources]
pbd-core = { workspace = true }
pbd-di = { workspace = true }