[project]
name = "pbd-http"
version = "0.1.0"
description = "PBD的Http模块"
readme = "README.md"
authors = [
    { name = "tianxiaode", email = "huangdengqiao@extjs.tech" }
]
requires-python = ">=3.11"
dependencies = [
    # "pbd-core"
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pbd_http"]

# [tool.uv.sources]
# pbd-core = { workspace = true }
