[project]
name = "pbd-localization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tianxiaode", email = "huangdengqiao@extjs.tech" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
pbd-localization = "pbd_localization:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
