[project]
name = "pbd-security"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tianxiaode", email = "huangdengqiao@extjs.tech" }
]
requires-python = ">=3.11"
dependencies = [
    "pbd-core",
    "pbd-di"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
pbd-core = { workspace = true }
pbd-di = { workspace = true }